--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bc_grey">#f5f5f5</color>
+    <color name="grey_status_bar">#c8c8c8</color>
 </resources>
