--- a/app/src/main/res/layout/fragment_weather_detal.xml
+++ b/app/src/main/res/layout/fragment_weather_detal.xml
@@ -23,6 +23,13 @@
             android:textSize="40sp"
             android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/img_song"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:layout_margin="16dp" />
+
         <TextView
             android:id="@+id/txv_1"
             android:layout_width="match_parent"
